# netCDF-DataReader

./: .travis.yml  CMakeLists.txt  INSTALL  LICENSE  README.md  README.txt  TODO  config.h.in
Modelica/: NcDataReader2.mo
Modelica/NcDataReader2/: package.mo
Modelica/NcDataReader2/Examples/: BigFile.mo  FullAPI.mo  FullAPIFunctions.c  FullAPIFunctions.h  FullAPIFunctions.mo  Simple.mo  TestSimple.mo
Modelica/NcDataReader2/Functions/: ncEasyGetAttributeDouble.mo  ncEasyGetAttributeLong.mo  ncEasyGetAttributeString.mo  ncEasyGetScattered2D.mo  package.mo
Modelica/NcDataReader2/Resources/Include/: FullAPIFunctions.h  ncDataReader2.h  ncDataReaderEA.h
NcDataReader2/: package.mo
NcDataReader2/Examples/: BigFile.mo  FullAPI.mo  Simple.mo  package.mo
NcDataReader2/Functions/: ncEasyDumpStatistics.mo  ncEasyGet1D.mo  ncEasyGetAttributeDouble.mo  ncEasyGetAttributeLong.mo  ncEasyGetAttributeString.mo  ncEasyGetScattered2D.mo  package.mo
NcDataReader2/Resources/: CMakeLists.txt  INSTALL  TODO
NcDataReader2/Resources/Include/: FullAPIFunctions.h  msvc_compatibility.h  ncDataReader2.h  ncDataReaderEA.h
NcDataReader2/Resources/doc/: CMakeLists.txt  Logo.odg  README.csa  ncDataReader2_Manual.rst  ncDataReader2_Manual.txt
NcDataReader2/Resources/examples/: CMakeLists.txt  GenerateBigFile.c  GenerateFile.m  GenerateFile.py  ModelicaUtilities.c  Read1D.c  Read1DChunk.c  Read1DEasyAPI.c  Read2D.c  Read2DEasyAPI.c  testfile.nc
NcDataReader2/Resources/src/: CMakeLists.txt  IpAkima.c  IpAkima.h  IpCosWin.c  IpCosWin.h  IpLinear.c  IpLinear.h  IpSinSteps.c  Lookup.c  Lookup.h  Misc.c  StringHashTable.c  StringHashTable.h  csa.c  ncDataReader2.h.in  ncDataReaderEA.c  ncDataReaderEA.h.in  ncDataSet1D.c  ncScattered2D.c  ncVar1D.c
NcDataReader2/Resources/tools/: CMakeLists.txt  csv.h  getopt.h  ncdr2Dump1D.c  ncdr2Import.py  ncdr2ImportCSV1D.c
doc/: CMakeLists.txt  ncDataReader2_Manual.txt
examples/: 00_README  CMakeLists.txt  CacheTests.c  GenerateBigFile.c  GenerateFile.c  GenerateFile.m  GenerateFile.py  PrintVersion.c  Read1D.c  Read1DChunk.c  Read1DEasyAPI.c  Read2D.c  Read2DEasyApi.c
src/: CMakeLists.txt  Chain.c  Chain.h  IpAkima.c  IpAkima.h  IpCosWin.c  IpCosWin.h  IpLinear.c  IpLinear.h  IpSinSteps.c  IpSinSteps.h  Lookup.c  Lookup.h  Misc.c  StringHashTable.c  StringHashTable.h  csa.c  csa_config.h  ncDataReader2.h.in  ncDataReaderEA.c  ncDataReaderEA.h.in  ncDataSet1D.c  ncScattered2D.c  ncVar1D.c  svd.c  svd.h
tools/: CMakeLists.txt  csv.c  getopt.c  ncdr2Dump1D.c  ncdr2Import.py  ncdr2ImportCSV1D.c
